--- a/pca/css/default.css
+++ b/pca/css/default.css
@@ -82,3 +82,18 @@ div.panel {
   border: 1px solid #e0e0e0;
   border-radius: 20px;
 }
+
+
+.float_right {
+  float: right;
+  width: 200px;
+  background-color: #eeffee;
+  opacity: 0.7;
+  font-family: Verdana, Helvetica, Arial, sans-serif;
+  font-size: smaller;
+  padding: 0px 10px 20px 10px;
+  margin: 15px 0px 15px 10px;
+  border: 3px double #c0e0c0;
+  border-radius: 10px;
+}
+
