--- a/lj/css/default.css
+++ b/lj/css/default.css
@@ -4,8 +4,8 @@ body {
 }
 
 form {
-  width: 840px;
-  padding: 20px 20px;
+  width: 94%;
+  padding: 3%;
   background-color: #f0f0f0;
   margin: auto;
 }
@@ -14,8 +14,8 @@ h1, h2, h3 {
   font-family: Georgia, serif;
   text-align: center;
   background-color: #f0f0ff;
-  padding: 15px;
-  margin-bottom: 0px;
+  padding: 15px 0px 15px 0px;
+  margin-bottom: 5px;
   border-top: 1px solid #cccccc;
   border-bottom: 1px solid #cccccc;
 }
