--- a/lj/css/default.css
+++ b/lj/css/default.css
@@ -1,10 +1,10 @@
 body {
-  width: 1000px;
+  width: 1100px;
   margin: auto;
 }
 
 form {
-  width: 94%;
+  width: 92%;
   padding: 3%;
   background-color: #f0f0f0;
   margin: auto;
@@ -94,6 +94,8 @@ hr {
 }
 
 div.panel {
+  display: inline-block;
+  width: 450px;
   background-color: #eeeeee;
   padding: 5px 20px;
   margin: 5px 0px 10px 0px;
