--- a/mtrand/css/default.css
+++ b/mtrand/css/default.css
@@ -1,37 +1,9 @@
-body {
-  width: 1000px;
-  margin: auto;
-}
-
 form {
-  width: 92%;
-  padding: 3%;
-  background-color: #f0f0f0;
+  width: 960px;
+  padding: 20px 20px;
   margin: auto;
-}
-
-h1, h2, h3 {
-  font-family: Georgia, serif;
-  text-align: center;
-  background-color: #f0f0ff;
-  padding: 15px 0px 15px 0px;
-  margin-bottom: 5px;
-  border-top: 1px solid #cccccc;
-  border-bottom: 1px solid #cccccc;
-}
-
-h1 {
-  font-size: 160%;
-}
-
-h2 {
-  font-size: 140%;
-  font-weight: normal;
-}
-
-h3 {
-  font-size: 120%;
-  font-weight: normal;
+  border: 1px solid #c0c0cc;
+  border-radius: 10px;
 }
 
 th {
@@ -63,7 +35,7 @@ option {
 }
 
 .largebtn {
-  font-family: Georgia, serif;
+  font-family: Georgia, "Times New Roman", serif;
   font-size: 120%;
   font-weight: bold;
   line-height: 180%;
@@ -72,16 +44,6 @@ option {
 
 .center {
   text-align: center;
-}
-
-textarea {
-  width: 96%;
-  margin: 5px;
-  padding: 2px 10px;
-  color: #202055;
-  background-color: #ffffdd;
-  font-family: "Consola", Monospace;
-  font-size: x-small;
 }
 
 .plot {
@@ -94,29 +56,36 @@ hr {
 }
 
 div.panel {
-  display: inline-block;
-  width: 400px;
   background-color: #eeeeee;
   padding: 5px 20px;
   margin: 5px 0px 10px 0px;
   border: 3px double #e0e0e0;
-  border-radius: 10px;
-}
-
-input[type=range] {
-  background-color: #dddddd;
-  padding: 2px 10px;
+  border-radius: 0px;
 }
 
 .panel-title {
+  color: #000020;
   background-color: #f0f0f0;
   text-align: center;
   font-family: Verdana, Helvetica, Arial, sans-serif;
+  font-size: 11pt;
   font-weight: bold;
-  padding: 2px;
+  padding: 5px 0px;
   margin: 5px 10px 15px 10px;
-  border: 1px solid #e0e0e0;
+  border: 2px outset #ffffff;
   border-radius: 20px;
 }
 
+.slider {
+  width: 120px;
+  margin-top: 5px;
+  margin-right: 5px;
+}
 
+.slider_num {
+  width: 40px;
+}
+
+input[type=range] {
+  background-color: #ddddff;
+}
