--- a/lj/css/default.css
+++ b/lj/css/default.css
@@ -93,9 +93,19 @@ hr {
   margin: 30px;
 }
 
+div.columncontainer {
+  float:left;
+}
+
+div.column {
+  float: left;
+  width: 500px;
+}
+
 div.panel {
-  display: inline-block;
   width: 450px;
+  font-family: Tahoma, sans-serif;
+  line-height: 170%;
   background-color: #eeeeee;
   padding: 5px 20px;
   margin: 5px 0px 10px 0px;
@@ -134,8 +144,8 @@ input[type=range] {
 }
 
 
-#seq {
-  font-family: monospace;
-  font-weight: bold;
+#sinfo {
+  margin: 30px 0px 0px 20px;
+  font-family: Verdana, sans-serif;
+  line-height: 200%;
 }
-
