--- a/lj/css/default.css
+++ b/lj/css/default.css
@@ -1,37 +1,53 @@
-body {
-  width: 1100px;
-  margin: auto;
+* {
+  box-sizing: border-box;
+  transition: all 0.3s ease;
 }
 
-form {
-  width: 92%;
-  padding: 3%;
-  background-color: #f0f0f0;
+body {
+  width: 1200px;
   margin: auto;
+  max-width: 100%;
+  line-height: 1.5;
+  font-family: Verdana, Tahoma, sans-serif;
+  letter-spacing: 0.07em;
+}
+
+.content {
+  width: 100%;
+  margin: auto;
+  color: #444;
 }
 
 h1, h2, h3 {
-  font-family: Georgia, serif;
-  text-align: center;
-  background-color: #f0f0ff;
-  padding: 15px 0px 15px 0px;
-  margin-bottom: 5px;
-  border-top: 1px solid #cccccc;
-  border-bottom: 1px solid #cccccc;
+  font-family: Cambria, Georgia, Times, 'Times New Roman', serif;
+  letter-spacing: 0.05em;
+  color: #333;
 }
 
 h1 {
   font-size: 160%;
+  font-weight: normal;
+  text-align: center;
+  margin-bottom: 1em;
+  padding: 1em 1em;
+  border-bottom: 1px solid #cccccc;
 }
 
-h2 {
-  font-size: 140%;
+h2 { /* key points */
+  font-size: 120%;
   font-weight: normal;
+  padding-left: 2em;
+}
+
+ul.summary li {
+  font-family: Tahoma, sans-serif;
+  font-size: 85%;
 }
 
 h3 {
   font-size: 120%;
   font-weight: normal;
+  margin-top: 1.5em;
 }
 
 th {
@@ -44,12 +60,12 @@ td, th {
 }
 
 .math {
-  font-family: Times, "Times New Roman", serif;
-  font-size: larger;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 105%;
 }
 
 .code {
-  font-family: Courier, "Courier New", Monospace;
+  font-family: "Courier New", Courier, monospace;
   font-weight: bold;
 }
 
@@ -62,12 +78,21 @@ option {
   padding: 3pt;
 }
 
-.largebtn {
-  font-family: Georgia, serif;
-  font-size: 120%;
-  font-weight: bold;
-  line-height: 180%;
-  padding: 0px 50px;
+.large-btn {
+  font-size: 150%;
+  letter-spacing: 0.05em;
+  line-height: 1.0;
+  padding: 0.3em 0.5em;
+  margin: 0.3em 0.2em;
+  color: #fff;
+  background-color: rgba(60, 160, 220, 1.0);
+  border: 1px solid rgba(60, 160, 220, 0.5);
+  border-radius: 4px;
+}
+
+.large-btn:hover {
+  background-image: radial-gradient(circle at 40% 60%,
+    rgba(255, 255, 255, 0.3) 0%, rgba(60, 200, 255, 0.5) 50%);
 }
 
 .center {
@@ -89,28 +114,60 @@ textarea {
 }
 
 hr {
-  color: #eeeeee;
-  margin: 30px;
+  border-bottom: 1px solid #e0e0e0;
+  color: rgba(0,0,0,0);
+  margin: 30px 0px;
 }
 
-div.columncontainer {
-  float:left;
+.row {
+  display: flex;
+  flex-flow: row wrap;
+  margin: 0px 0 20px 0px;
+  border: solid #e0e0e0;
+  border-width: 0px 0px 1px 0px;
 }
 
-div.column {
-  float: left;
-  width: 500px;
+.column {
+  flex: 1;
+  min-width: 300px;
 }
 
-div.panel {
-  width: 450px;
-  font-family: Tahoma, sans-serif;
-  line-height: 170%;
-  background-color: #eeeeee;
-  padding: 5px 20px;
-  margin: 5px 0px 10px 0px;
-  border: 3px double #e0e0e0;
-  border-radius: 10px;
+.panel {
+  line-height: 2.0;
+  background-color: rgba(255,255,255,0.8);
+  padding: 0px 10px 25px 10px;
+  margin: 0px 0px 20px 0px;
+  border-radius: 0px;
+}
+
+.panel h3 {
+  margin-bottom: 0px;
+  padding-left: 0.7em;
+  /* border-left: 5px solid #cdf; */
+}
+
+.folder {
+  display: inline-block;
+  font-size: 80%;
+  background-color: rgba(60, 200, 100, 1.0);
+  color: #fff;
+  border-radius: 8px;
+  width: 1.5em;
+  text-align: center;
+  line-height: 1.5;
+  margin-left: 0.5em;
+  box-shadow: 1px 1px 2px #486;
+}
+
+.folder:hover {
+  transform: translate(1px, 1px);
+  transition: all 0.1s ease;
+}
+
+.folder:active {
+  background-color: rgba(60, 225, 108, 0.9);
+  transform: translate(0px, 0px);
+  transition: all 0.1s ease;
 }
 
 input[type=range] {
@@ -119,19 +176,124 @@ input[type=range] {
 }
 
 .panel-title {
-  background-color: #f0f0f0;
+  font-family: Calibri, Candara, sans-serif;
+  font-size: 110%;
+  font-variant: all-small-caps;
+  color: #222;
+  background-color: #f7f7f7;
   text-align: center;
-  font-family: Verdana, Helvetica, Arial, sans-serif;
-  font-weight: bold;
-  padding: 2px;
-  margin: 5px 10px 15px 10px;
+  padding: 0.35em 1em;
+  margin: 15px 0px 35px 0px;
   border: 1px solid #e0e0e0;
-  border-radius: 20px;
+  border-radius: 4px;
 }
 
+.canvas {
+  width: 100%;
+}
 
-#sinfo {
-  margin: 30px 0px 0px 20px;
-  font-family: Verdana, sans-serif;
-  line-height: 120%;
+.plot-container {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.plot-item {
+  display: inline-block;
+  flex: 1;
+  min-width: 300px;
+  width: 100%;
+  margin: 20px 0px;
+}
+
+.dygraph-plot {
+  width: 100%;
+}
+
+.input-group {
+  margin: 1.2em 0.5em;
+  padding: 0 0.5em;
+}
+
+select, input {
+  font-family: Verdana, Tahoma, sans-serif;
+  font-size: 95%;
+  letter-spacing: 0.05em;
+  margin: 10px 0px 2px 5px;
+  padding: 6px 8px;
+  color: #444;
+  background-color: #fcfcfc;
+  border: 1px solid #c7c7c7;
+  border-radius: 4px;
+}
+
+.scale-changer-wrapper {
+  padding: 5px 5px;
+  display: flex;
+  align-items: center;
+  height: 50px;
+}
+
+.scale-icon {
+  transform: translate(0px, 4px);
+  padding: 0px 8px;
+}
+
+.scale-changer {
+  width: 100%;
+  display: block;
+}
+
+.help-text {
+  font-size: 80%;
+  letter-spacing: 0.03em;
+  line-height: 1.3;
+  text-align: left;
+  color: rgba(80,80,80,0.8);
+  padding: 0.7em 0.5em 0.5em 0.8em;
+}
+
+@media screen and (min-width: 1000px) {
+  .canvas-container {
+    display: inline-block;
+    width: calc(100% - 40px - 480px);
+  }
+
+  .plot-container {
+    float: right;
+    width: 480px;
+    margin: 10px 20px 0px 20px;
+  }
+}
+
+.status {
+  padding: 30px 0px 30px 32px;
+  line-height: 2.5;
+  display: inline-block;
+}
+
+.tag {
+  font-variant: all-small-caps;
+}
+
+.qr-wrapper {
+  text-align: center;
+  padding: 0.5em 0.5em;
+  float: right;
+  width: 125px;
+  margin-right: 20px;
+  max-width: 25%;
+}
+
+#qr-page {
+  width: 100%;
+}
+
+.clear-fix {
+  display: table;
+  clear: both;
+}
+
+.my-icon svg {
+	margin: 0px 10px 0px 5px;
+	transform: translate(0px, 2px);
 }
